# logger_for_classmates

./: 1.txt  2.txt  CMakeLists.txt  logger_conf.json  main.cpp
client_logger/: CMakeLists.txt
client_logger/src/: client_logger_builder.cpp
logger/: CMakeLists.txt
